work session w everyone w error handling and frontend

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
           <br>
           <br>
-          <i class='fa fa-id-card' style='font-size:96px; color: gray;'></i>
-          <h2 class="w3-text-grey w3-padding-16">Select a professor...</h2>
+          <i class='fa fa-id-card' style='font-size:96px; color: rgb(89, 89, 89);'></i>
+          <h2 class="w3-text-grey w3-padding-16">Select a Professor...</h2>
         </center>
       </div>
     
