--- a/review.html
+++ b/review.html
@@ -39,16 +39,24 @@
                       </p>
                     </div>
                     <br>
-                    <label for="content">Quality of Content <span style="color: red;">*</span></label>
-                    <input type="number" name="content" min="0" max="5" step="0.1" required/>
-                    <br>
-                    <label for="content">Quality of Delivery <span style="color: red;">*</span></label>                    <input type="number" name="delivery" min="0" max="5" step="0.1" required/>
-                    <br>
-                    <label for="content">Level of Availability <span style="color: red;">*</span></label>
-                    <input type="number" name="availability" min="0" max="5" step="0.1" required/>
-                    <br>
-                    <label for="content">Level of Organization <span style="color: red;">*</span></label>
-                    <input type="number" name="organization" min="0" max="5" step="0.1" required/>
+                    <div class="w3-row-padding">
+                      <div class="w3-quarter">
+                        <label for="content">Quality of Content <span style="color: red;">*</span></label>
+                        <input type="number" name="content" min="0" max="5" step="0.1" required/>
+                      </div>
+                      <div class="w3-quarter">
+                        <label for="content">Quality of Delivery <span style="color: red;">*</span></label>
+                        <input type="number" name="delivery" min="0" max="5" step="0.1" required/>
+                      </div>
+                      <div class="w3-quarter">
+                        <label for="content">Level of Availability <span style="color: red;">*</span></label>
+                        <input type="number" name="availability" min="0" max="5" step="0.1" required/>
+                      </div>
+                      <div class="w3-quarter">
+                        <label for="content">Level of Organization <span style="color: red;">*</span></label>
+                        <input type="number" name="organization" min="0" max="5" step="0.1" required/>
+                      </div>
+                    </div>
                     <br>
                     <b>Any Comments?</b>
                     <textarea name="comment"> </textarea>
