--- a/detailtable.html
+++ b/detailtable.html
@@ -1,94 +1,146 @@
 <!DOCTYPE html>
-<html>
-  <script
-    src="https://kit.fontawesome.com/a076d05399.js"
-    crossorigin="anonymous"
-  ></script>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+  <style>
+    .container-fluid {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    .container-fluid h3 {
+      margin: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .header {
+      background-color: #9a9fe6;
+      color: black;
+      padding: 20px;
+      text-align: center;
+      border-radius: 8px 8px 0 0;
+    }
+
+    .content-container {
+      padding: 20px;
+    }
+
+    .feedback-heading {
+      font-size: 24px;
+      margin-bottom: 10px;
+      color: #333;
+    }
+
+    .professor-info {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .professor-info h2 {
+      margin: 0;
+      font-size: 36px;
+      color: #333;
+    }
+
+    .department-info {
+      font-size: 18px;
+      margin-bottom: 10px;
+      color: #555;
+    }
+
+    .reviews-container {
+      border-top: 1px solid #ddd;
+      margin-top: 20px;
+      padding-top: 20px;
+    }
+
+    .review-box {
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 15px;
+      margin-bottom: 20px;
+      background-color: #fff;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .review-box p {
+      margin: 0;
+      padding: 5px 0;
+      color: #555;
+    }
+
+    .star-rating i {
+      color: #f1c40f;
+    }
+  </style>
+</head>
+
+<body>
 
   {% if not reviews %}
-  <div
-    class="container-fluid px-2.5"
-    style="
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: white;
-    "
-  >
-    <div>
+  <div class="container">
+    <div class="header">
       <h3>No reviews have been added for {{prof.name.title()}} yet!</h3>
     </div>
   </div>
-
   {% else %}
-  <div class="container-fluid px-2.5">
-    <div class="w3-container w3-white w3-margin-bottom">
-      <h2 class="w3-text-grey w3-padding-16">
-        <i
-          class="fa fa-user w3-margin-right"
-          style="font-size: 36px"
-        ></i
-        >{{prof.name.title()}}
-      </h2>
-      <h5 class="w3-opacity"><b>Department: {{prof.department}}</b></h5>
-      <h5 class="w3-opacity"><b>{{prof.numratings}} Reviews</b></h5>
-      <br />
+  <div class="container">
+    <div class="header">
+      <!-- <i class="fa fa-user" style="font-size: 36px;"></i> -->
+      <h2> {{prof.name.title()}} • {{prof.department}}</h2> 
+      <center><h4>{{prof.numratings}} Reviews <b>|</b> {{ '%.2f'|format(prof.rating) }}{% set wholeStars = prof.rating | int %}
+        {% for _ in range(wholeStars) %}<i class="fa fa-star"></i>{% endfor %}
+        {% set fractionalPart = prof.rating - wholeStars %}
+        {% if fractionalPart > 0 %}
+          <i class="fa fa-star-half"></i>
+        {% endif %}
+      </h4></center>
     </div>
-    <div class="w3-container w3-white w3-margin-bottom">
-      <h2 class="w3-text-grey w3-padding-16">
-        <i
-          class="fa fa-comments fa-fw w3-margin-right w3-xxlarge"
-        ></i
-        >Student Feedback:
-      </h2>
 
-      <style>
-        .review-box {
-          border: 1px solid #ddd;
-          border-radius: 8px;
-          padding: 15px;
-          margin-bottom: 20px;
-        }
+    <div class="content-container">
+      <div class="feedback-heading">
+        <i class="fa fa-comments fa-fw" style="font-size: 24px;"></i> Student Feedback:
+      </div>
 
-        .review-box p {
-          margin: 0;
-          padding: 5px 0;
-        }
-
-        .even-box {
-          background-color: #f5f8fa; /* Light blue for even boxes */
-        }
-
-        .odd-box {
-          background-color: #f0f0f0; /* Light gray for odd boxes */
-        }
-      </style>
-      <div class="w3-container w3-white w3-margin-bottom">
-        <!-- <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-comments fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Student Feedback:</h2> -->
-
+      <div class="reviews-container">
         {% for review in reviews %}
-        <div
-          class="w3-container review-box {% if loop.index is even %}even-box{% else %}odd-box{% endif %}"
-        >
-          <!-- make for loop for all reviews  -->
-          <p><strong>Overall Rating:</strong> {{ review.rating }}</p>
+        <div class="review-box">
+          <center><h5> {% set wholeStars = review.rating | int %}
+            {% for _ in range(wholeStars) %}<i class="fa fa-star"></i>{% endfor %}
+            {% set fractionalPart = review.rating - wholeStars %}
+            {% if fractionalPart > 0 %}
+              <i class="fa fa-star-half"></i>
+            {% endif %}
+          </h5></center>
           <p>
-            <strong>Content:</strong> {{ review.content }} / 5.0 |
-            <strong>Delivery:</strong> {{ review.delivery }} / 5.0 |
-            <strong>Availability:</strong> {{ review.availability }} / 5.0 |
-            <strong>Organization:</strong> {{ review.organization }} / 5.0
+            <strong>Content:</strong> {{ review.content }} |
+            <strong>Delivery:</strong> {{ review.delivery }} |
+            <strong>Availability:</strong> {{ review.availability }} |
+            <strong>Organization:</strong> {{ review.organization }} 
           </p>
           <p><strong>Comments:</strong> {{ review.comment }}</p>
-          <p>
-            <strong>Courses taken with {{ prof.name.title() }}:</strong> {{
-            review.courses }}
-          </p>
+          <p><strong>Courses taken with {{ prof.name.title() }}:</strong> {{ review.courses }}</p>
           <p><strong>Year:</strong> {{ review.datetime.strftime('%Y') }}</p>
         </div>
         {% endfor %}
       </div>
     </div>
-    {% endif %}
   </div>
+  {% endif %}
+
+</body>
+
 </html>
