--- a/adminproftable.html
+++ b/adminproftable.html
@@ -1,108 +1,122 @@
 <style>
   .card-wrapper {
-      padding: 2px 8px;
+    padding: 2px 8px;
   }
 
   .card {
-      flex: 1 1 calc(33.33% - 20px); /* Adjust the width of each card as needed */
-      margin: 10px; /* Adjust the margin to add space between cards */
-      padding: 20px;
-      border: 1px solid #ddd; /* Add a border for separation */
-      border-radius: 5px; /* Optional: Add rounded corners */
-      background-color: #cdeccd; /* Set the background color */
+    flex: 1 1 calc(33.33% - 20px); /* Adjust the width of each card as needed */
+    margin: 10px; /* Adjust the margin to add space between cards */
+    padding: 20px;
+    border: 1px solid #ddd; /* Add a border for separation */
+    border-radius: 5px; /* Optional: Add rounded corners */
+    background-color: #cdeccd; /* Set the background color */
   }
 </style>
 
-
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Admin Controls</title>
-        <meta name="viewport"
-        content="width=device-width, initial-scale=1">
+  <head>
+    <title>Admin Controls</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="stylesheet" href=
- "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
 
+    <style>
+      .header,
+      .footer {
+        background-color: white;
+        color: rgb(71, 135, 232);
+      }
+    </style>
+  </head>
 
-        <style>
-            .header, .footer {background-color:white; color:rgb(71, 135, 232)}
-        </style>
-
-    </head>
-
-    <body>
-        <div class="container-fluid header">
-            <center>
-                <h1>Admin Control Panel</h1>
-            </center>
-        </div>
-<!-- <script src="path/to/jquery.min.js"></script> Include jQuery if not already included -->
-<!-- <script src="path/to/db_utils.js"></script>
-<script src="path/to/main.js"></script> -->
-<div class="container-fluid">
-  <center>
-<h3>Displaying all reviews for {{profname}}:</h3>
-</center>
-
-<table class="table table-striped">
-
-    {% if not reviews %}
-    {{profname}} does not have any reviews!
-    <hr>
-
-    {% else %}
-    <center>
-      <a href="/adminlandingpage">Go back to all professors</a>
-    </center>
-
-    <div class="card-wrapper"></div>
-
-    {% for review in reviews %}
-    <div class="card">
-      <!-- make for loop for all reviews  -->
-      <p>Overall Rating: {{review.rating}} </p> <!-- gonna have to add this  -->
-      <p>Content: {{review.content}} / 5.0 | Delivery {{review.delivery}} / 5.0 | Availability {{review.availability}} / 5.0 | Organization {{review.organization}} / 5.0</p>
-      <p>Comments: {{review.comment}}</p>
-      <p>Courses taken with {{profname}}: {{review.courses}}</p>
-      <!-- *** WE NEED TO ADD A FUNCTION IN UTILS TO BE ABLE TO DELETE AN INDIVIDUAL REVIEW! -->
-      <button onclick="deleteReview('{{review.reviewId}}', '{{profname}}', '{{profdept}}')">Delete</button>
-
-      <hr>
+  <body>
+    <div class="container-fluid header">
+      <center>
+        <h1>Admin Control Panel</h1>
+      </center>
     </div>
-    {% endfor %}
-    {% endif %}
-</table>
-</div>
+    <!-- <script src="path/to/jquery.min.js"></script> Include jQuery if not already included -->
+    <!-- <script src="path/to/db_utils.js"></script>
+<script src="path/to/main.js"></script> -->
+    <div class="container-fluid">
+      <center>
+        <h3>Displaying all reviews for {{profname.title()}}:</h3>
+      </center>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
-<script>
+      <table class="table table-striped">
+        {% if not reviews %} {{profname}} does not have any reviews!
+        <hr />
 
-  'use strict'; 
+        {% else %}
+        <center>
+          <a href="/adminlandingpage">Go back to all professors</a>
+        </center>
 
-  function handleDeleteResponse(data) {
-    location.reload();
-  }
+        <div class="card-wrapper"></div>
 
-  function handleError() {
-    alert('Error: Failed to fetch data from server');
-  }
+        {% for review in reviews %}
+        <div class="card">
+          <!-- make for loop for all reviews  -->
+          <p>Overall Rating: {{review.rating}}</p>
+          <!-- gonna have to add this  -->
+          <p>
+            Content: {{review.content}} / 5.0 | Delivery {{review.delivery}} /
+            5.0 | Availability {{review.availability}} / 5.0 | Organization
+            {{review.organization}} / 5.0
+          </p>
+          <p>Comments: {{review.comment}}</p>
+          <p>Courses taken with {{profname.title()}}: {{review.courses}}</p>
+          <!-- *** WE NEED TO ADD A FUNCTION IN UTILS TO BE ABLE TO DELETE AN INDIVIDUAL REVIEW! -->
+          <button
+            onclick="deleteReview('{{review.reviewId}}', '{{profname}}', '{{profdept}}')"
+          >
+            Delete
+          </button>
 
-  function deleteReview(reviewId, profname, profdept) {
-    var result = confirm("Are you sure you want to delete this review?");
-    if (result) {
-        console.log("hi");
-    console.log(reviewId);
-    let url = "/delete_review?reviewId=" + reviewId + "&profName=" + profname + "&profDept=" + profdept;
+          <hr />
+        </div>
+        {% endfor %} {% endif %}
+      </table>
+    </div>
 
-    let deleteRequestData = {
-      type: "DELETE",
-      url: url,
-      success: handleDeleteResponse,
-      error: handleError,
-    };
-    $.ajax(deleteRequestData);
-    }
-    
-  }
-</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+      "use strict";
+
+      function handleDeleteResponse(data) {
+        location.reload();
+      }
+
+      function handleError() {
+        alert("Error: Failed to fetch data from server");
+      }
+
+      function deleteReview(reviewId, profname, profdept) {
+        var result = confirm("Are you sure you want to delete this review?");
+        if (result) {
+          console.log("hi");
+          console.log(reviewId);
+          let url =
+            "/delete_review?reviewId=" +
+            reviewId +
+            "&profName=" +
+            profname +
+            "&profDept=" +
+            profdept;
+
+          let deleteRequestData = {
+            type: "DELETE",
+            url: url,
+            success: handleDeleteResponse,
+            error: handleError,
+          };
+          $.ajax(deleteRequestData);
+        }
+      }
+    </script>
+  </body>
+</html>
