made review form a post method

--- a/review.html
+++ b/review.html
@@ -22,7 +22,7 @@
         <div id="review-form" class="w3-container">
           <h2>Submit a Review</h2>
                           <!-- Input boxes for searching -->
-                <form action="/review" method="get">
+                <form action="/review" method="post">
 
                     <b>Professor:</b>
                     <select id="professor-select" name="professor" style="width: 100%;" required>
