--- a/adminlanding.html
+++ b/adminlanding.html
@@ -61,7 +61,7 @@
 <h1>How do you want to search reviews?</h1>
 <br>
 <a href="/adminprofpage"><button class="button"><span>By Professor </span></button></a>
-<a href="/adminuserpage"><button class="button"><span>By Reviewer </span></button></a>
+<a href="/adminuserpage"><button class="button"><span>By User </span></button></a>
 </center>
 
 </body>
