--- a/adminproftable.html
+++ b/adminproftable.html
@@ -53,7 +53,7 @@
 
         {% else %}
         <center>
-          <a href="/adminprofpage">Go back to all professors</a>
+          <a href="/adminprofpage"><button>Go back to all professors</button></a>
         </center>
 
         <div class="card-wrapper"></div>
