--- a/adminuserpage.html
+++ b/adminuserpage.html
@@ -44,8 +44,8 @@
               </div>
         </div>
 
-        <a href="/adminlandingpage">Go Back</a>
-        <a href="/bannedusers">Banned Users</a>
+        <a href="/adminlandingpage"><button>Go back</button></a>
+        <a href="/bannedusers"><button>Banned Users</button></a>
         <br>
         <br>
 
