--- a/bannedusers.html
+++ b/bannedusers.html
@@ -59,8 +59,8 @@
       <div class="container-fluid adminheader">
         <center>
           <h1>Admin Control Panel</h1>
-  
-          <a href="/adminuserpage">Go Back</a>
+          <br>
+          <a href="/adminuserpage"><button>Go Back</button></a>
           <br>
           <br>
   
