--- a/adminprofpage.html
+++ b/adminprofpage.html
@@ -48,7 +48,7 @@
         </div>
         </div>
         <br>
-        <a href="/adminlandingpage">Go Back</a>
+        <a href="/adminlandingpage"><button>Go Back</button></a>
         <br>    
         <br>  
     </center>
