popup before uban

--- a/bannedusers.html
+++ b/bannedusers.html
@@ -82,7 +82,7 @@
               <tr>
                   <td>
                       <h5 style="color: black;">{{username}}</h5>
-                      <a href="/unban?username={{username}}">Unban</a>
+                      <a href="/unban?username={{username}}" onclick="return confirm('Are you sure you want to uban this user?')">Unban</a>
                   </td>
               </tr>
           </div>
