made the help page

--- a/header.html
+++ b/header.html
@@ -39,5 +39,6 @@
     </div>
   </div>
   <a class= "hover" href="/review_form">Review a Professor</a>
+  <a class= "hover" href="/help">Help</a>
 </div>
 
