worked on help page and some frontend design

--- a/adminprofpage.html
+++ b/adminprofpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="/static/style.css">
 
 <html>
   <head>
@@ -47,8 +47,7 @@
             />
         </div>
         </div>
-        <br>
-        <a href="/adminlandingpage"><button>Go Back</button></a>
+        <a href="/adminlandingpage"><button style="background-color: orange;">Go Back</button></a>
         <br>    
         <br>  
     </center>
