--- a/help.html
+++ b/help.html
@@ -1,2 +1,16 @@
-Need help? Please email eb1889!
-<a href="/index">go back to the homepage</a>
+<style>
+    .helptext {
+        font-size: 54pt;
+        font-weight:400;
+    }
+</style>
+{% include 'header.html' %}
+
+<center>
+    <br>
+    <div class="helptext">Need help?</div>
+    Send us an email at eb1889@princeton.edu
+    <br>
+    <br>
+    <a href="/index"><button style="background-color: orange;"> Go back to the homepage</button></a>
+</center>
