--- a/help.html
+++ b/help.html
@@ -1,16 +1,24 @@
 <style>
-    .helptext {
-        font-size: 54pt;
-        font-weight:400;
-    }
+  .helptext {
+    font-size: 54pt;
+    font-weight: 400;
+  }
 </style>
 {% include 'header.html' %}
 
 <center>
-    <br>
-    <div class="helptext">Need help?</div>
-    Send us an email at eb1889@princeton.edu
-    <br>
-    <br>
-    <a href="/index"><button style="background-color: orange;"> Go back to the homepage</button></a>
+  <br />
+  <div class="helptext">Need help?</div>
+  Send an email to one of the system administrators:
+  <br />
+  <a href="mailto:jc4557@princeton.edu">Jacob Colchamiro</a>,
+  <a href="mailto:kw2689@princeton.edu">Kayla Waitman</a>, Eden Bendory,
+  Jonathan Mindel
+  <br />
+  <br />
+  <a href="/index"
+    ><button style="background-color: orange">
+      Go back to the homepage
+    </button></a
+  >
 </center>
