Yoni+Eden : styling, adminusertable error handling

--- a/review.html
+++ b/review.html
@@ -69,7 +69,7 @@
                     <br>
                     <br>
                     <button type="reset" onclick="discardForm()" style="background-color: red; color: white;">Discard</button>
-                    <button type="submit">Submit Review</button>
+                    <button type="submit" style="background-color: #04AA6D;" onclick="return confirm('Are you sure you want to submit this review?')">Submit Review</button>
 
                     <script>
                       function discardForm() {
