--- a/adminusertable.html
+++ b/adminusertable.html
@@ -50,7 +50,7 @@
 
 <table class="table table-striped">
 
-    {% if is_banned %}
+    {% if is_banned is true %}
     <center>
       <br>
     <a href="/bannedusers"><button>Go to all banned users</button></a>
@@ -61,7 +61,7 @@
     </center>
 
     {% elif not reviews %}
-    {{username}} has not left any reviews!
+    <h2>{{username}} has not left any reviews!</h2>
     <hr>
 
     {% else %}
@@ -85,8 +85,8 @@
       <button onclick="deleteReview('{{review.reviewId}}', '{{professor.name}}', '{{professor.department}}')">Delete</button>
     </div>
     {% endfor %}
-  </div>
     {% endif %}
+  </div>
   </div>
 
 </div>
