--- a/error_admin.html
+++ b/error_admin.html
@@ -1,1 +1,49 @@
-<h1>{{error_msg}}</h1>
+<!DOCTYPE html>
+<link rel="stylesheet" href="/static/style.css">
+
+<html>
+  <head>
+    <title>Princeton Professors Admin</title>
+    <link rel="icon" href="https://www.cs.princeton.edu/favicon">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+
+    <style>
+      .adminheader,
+      .adminfooter {
+        background-color: white;
+        color: rgb(71, 135, 232);
+      }
+
+      .adminbody {
+        background-color: rgb(71, 135, 232);
+        color: white
+      }
+
+      .search-container {
+      max-width: 400px;
+      margin: 20 auto;
+    }
+    </style>
+  </head>
+<div class="adminheader container-fluid ">
+    <center>
+      <h1>Admin Control Panel</h1>
+      <br>
+      <a href="/adminlandingpage"><button style="background-color: orange;">Go to admin homepage</button></a>
+      <br>    
+      <br>  
+  </center>
+  </div>
+  <div class="adminbody">
+  <div class="container-fluid">
+ 
+<center>
+<h1>{{error_msg}}. Please try again!</h1>
+</center>
+</div>
+</div>
