changed button style

--- a/adminusercontrols.html
+++ b/adminusercontrols.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-    <div class="adminbody
+    <div class="adminbody">
     <div class="container-fluid header">
       <center>
         <h1>Admin Control Panel</h1>
