--- a/adminuserpage.html
+++ b/adminuserpage.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="/static/style.css">
 
     <style>
       .adminheader,
