Yoni+Eden: finally caught last admin error

--- a/help.html
+++ b/help.html
@@ -8,7 +8,7 @@
 
 <center>
   <br />
-  <div class="helptext">Need help?</div>
+  <div class="helptext">Need Help?</div>
   Send an email to one of the system administrators:
   <br />
   <a href="mailto:jc4557@princeton.edu">Jacob Colchamiro</a>,
