kayla and eden kind of: adding links to all the admin control page headers

--- a/adminusertable.html
+++ b/adminusertable.html
@@ -36,7 +36,7 @@
 
         <div class="container-fluid header">
             <center>
-                <h1>Admin Control Panel</h1>
+              <a style="text-decoration: none;"href="adminlandingpage"><h1>Admin Control Panel</h1></a>
             </center>
         </div>
 <!-- <script src="path/to/jquery.min.js"></script> Include jQuery if not already included -->
