--- a/adminlanding.html
+++ b/adminlanding.html
@@ -24,7 +24,7 @@
   <body>
     <div class="container-fluid header">
       <center>
-        <h1>Admin Control Panel</h1>
+        <a style="text-decoration: none;"href="adminlandingpage"><h1>Admin Control Panel</h1></a>
       </center>
     </div>
 
