--- a/adminprofpage.html
+++ b/adminprofpage.html
@@ -35,7 +35,7 @@
   <div class="adminbody">
     <div class="adminheader container-fluid ">
       <center>
-        <h1>Admin Control Panel</h1>
+        <a style="text-decoration: none;"href="adminlandingpage"><h1>Admin Control Panel</h1></a>
         <br>
         <div class="search-container">
           <div class="row">
