--- a/adminusercontrols.html
+++ b/adminusercontrols.html
@@ -34,7 +34,7 @@
     <div class="adminbody">
     <div class="container-fluid header">
       <center>
-        <h1>Admin Control Panel</h1>
+        <a style="text-decoration: none;"href="adminlandingpage"><h1>Admin Control Panel</h1></a>
         <div class="row">
           <div class="search-container">
             <hr>
