--- a/adminuserpage.html
+++ b/adminuserpage.html
@@ -34,7 +34,7 @@
     
     <div class="container-fluid adminheader">
       <center>
-        <h1>Admin Control Panel</h1>
+        <a style="text-decoration: none;"href="adminlandingpage"><h1>Admin Control Panel</h1></a>
         <div class="search-container">
             <div class="row">
                   <input
