--- a/bannedusers.html
+++ b/bannedusers.html
@@ -59,7 +59,7 @@
       
       <div class="container-fluid adminheader">
         <center>
-          <h1>Admin Control Panel</h1>
+          <a style="text-decoration: none;"href="adminlandingpage"><h1>Admin Control Panel</h1></a>
           <br>
           <a href="/adminuserpage"><button>Go Back</button></a>
           <br>
