--- a/error_admin.html
+++ b/error_admin.html
@@ -32,7 +32,7 @@
   </head>
 <div class="adminheader container-fluid ">
     <center>
-      <h1>Admin Control Panel</h1>
+      <a style="text-decoration: none;"href="adminlandingpage"><h1>Admin Control Panel</h1></a>
       <br>
       <a href="/adminlandingpage"><button style="background-color: orange;">Go to admin homepage</button></a>
       <br>    
