fixes help page and adds user authentication checks

--- a/help.html
+++ b/help.html
@@ -4,6 +4,7 @@
     font-weight: 400;
   }
 </style>
+{% set username = username %} 
 {% include 'header.html' %}
 
 <center>
@@ -12,8 +13,9 @@
   Send an email to one of the system administrators:
   <br />
   <a href="mailto:jc4557@princeton.edu">Jacob Colchamiro</a>,
-  <a href="mailto:kw2689@princeton.edu">Kayla Waitman</a>, Eden Bendory,
-  Jonathan Mindel
+  <a href="mailto:kw2689@princeton.edu">Kayla Waitman</a>,
+  <a href="mailto:eb1889@princeton.edu">Eden Bendory</a>,
+  <a href="mailto:jm2889@princeton.edu">Jonathan Mindel</a>
   <br />
   <br />
   <a href="/index"
