--- a/search_results.html
+++ b/search_results.html
@@ -14,7 +14,7 @@
     color: rgb(51, 51, 51);
     border-radius: 8px;
     padding: 3px;
-    background-color: lightcoral;
+    background-color: lightskyblue;
   }
   .ratingB{
     display: inline-block;
