--- a/error.html
+++ b/error.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <br>
-      {{error_msg}}
+    <center>
+      <h2>{{error_msg}}</h2>
+    </center>
     <br>
   </body>
 </html>
