--- a/review.html
+++ b/review.html
@@ -68,10 +68,16 @@
                     <span style="color: red;">*</span> = required
                     <br>
                     <br>
-                    <button type="reset" onclick="discardForm()" style="background-color: red; color: white;">Discard</button>
+                    <button type="reset" onclick="confirmDiscard()" style="background-color: red; color: white;">Discard</button>
                     <button type="submit" style="background-color: #04AA6D;" onclick="return confirm('Are you sure you want to submit this review?')">Submit Review</button>
 
                     <script>
+                      function confirmDiscard() {
+                        var confirmation = confirm("Are you sure you want to discard this review?");
+                        if (confirmation) {
+                          discardForm();
+                        }
+                      }
                       function discardForm() {
                         // Redirect to the index page
                         window.location.href = '/index';
