some heuristic changes after the meeting

--- a/landing.html
+++ b/landing.html
@@ -22,7 +22,7 @@
 <a>Princeton Professors</a>
 </div>
 <center>
-<h1>Learn more about your professors.</h1>
+<h1>Rate and review your professors.</h1>
 <br>
 <a href="/index"><button style="background-color: orange;">Log in with Princeton NetId</button></a>
 </center>
