adds department key to help page (and also footer)

--- a/help.html
+++ b/help.html
@@ -4,8 +4,7 @@
     font-weight: 400;
   }
 </style>
-{% set username = username %} 
-{% include 'header.html' %}
+{% set username = username %} {% include 'header.html' %}
 
 <center>
   <br />
@@ -17,6 +16,52 @@
   <a href="mailto:eb1889@princeton.edu">Eden Bendory</a>,
   <a href="mailto:jm2889@princeton.edu">Jonathan Mindel</a>
   <br />
+  <h2>Department Key:</h2>
+  African American Studies - AAS <br />
+  American Studies - AMS <br />
+  Anthropology - ANT <br />
+  Architecture - ARC <br />
+  Art and Archaeology - ART <br />
+  Center for Human Values - UCH <br />
+  Center for Statistics and Machine Learning - SML <br />
+  Center for the Study of Religion - CSR <br />
+  Council of the Humanities - HUM <br />
+  Creative Writing - LCA <br />
+  Chemistry - CHM <br />
+  Civil and Environmental Engineering - CEE <br />
+  Classics - CLA <br />
+  Comparative Literature - COM <br />
+  Computer Science - COS <br />
+  Dance - LCA <br />
+  East Asian Studies - EAS <br />
+  Economics - ECO <br />
+  Electrical and Computer Engineering - ECE <br />
+  English - ENG <br />
+  French and Italian - FIT <br />
+  Gender and Sexuality Studies - GSS <br />
+  German - GER <br />
+  Hellenic Studies - HLS <br />
+  History - HIS <br />
+  Lewis Center for the Arts - LCA <br />
+  Lewis-Sigler Institute of Genomics - LSI <br />
+  Linguistics - HUM <br />
+  Mathematics - MAT <br />
+  Music - MUS <br />
+  Near Eastern Studies - NES <br />
+  Politics - POL <br />
+  Princeton Institute for International and Regional Studie (PIIRS) - PII <br />
+  Princeton Institute for the Science and Technology of Materials (PRISM) - PSM
+  <br />
+  Princeton Neuroscience Institute - PNI <br />
+  Princeton School of Public and International Affairs - SPI <br />
+  Princeton University Art Museum - UAM <br />
+  Psychology - PSY <br />
+  Religion - REL <br />
+  Slavic Languages and Literature - SLA <br />
+  Sociology - SOC <br />
+  Spanish and Portuguese Languages and Culture - SPO <br />
+  Theater - LCA <br />
+  Visual Arts - LCA <br />
   <br />
   <a href="/index"
     ><button style="background-color: orange">
@@ -24,3 +69,5 @@
     </button></a
   >
 </center>
+
+{% include 'footer.html' %}
