Add overall ratings to professor page

--- a/detailtable.html
+++ b/detailtable.html
@@ -108,6 +108,7 @@
           <i class="fa fa-star-half"></i>
         {% endif %}
       </h4></center>
+      <h5>Content: {{prof.content}} | Delivery: {{prof.delivery}} | Availability: {{prof.availability}} | Organization: {{prof.organization}}</h5>
     </div>
 
     <div class="content-container">
