--- a/header.html
+++ b/header.html
@@ -26,7 +26,7 @@
 <!-- Page Container -->
 
 <div class="topnav">
-  <img src="https://www.cs.princeton.edu/favicon"></img>
+  <img src="/static/logo.jpg"></img>
   <a href="/index">Princeton Professors</a>
   <div class="dropdown">
     <button class="dropbtn">{{username}}</button>
