--- a/landing.html
+++ b/landing.html
@@ -18,7 +18,7 @@
 <!-- Page Container -->
 
 <div class="topnav">
-<img src="https://www.cs.princeton.edu/favicon"></img>
+<img src="/static/logo.jpg"></img>
 <a>Princeton Professors</a>
 </div>
 <center>
