--- a/review.html
+++ b/review.html
@@ -43,19 +43,19 @@
                     <div class="w3-row-padding">
                       <div class="w3-quarter">
                         <label for="content">Quality of Content <span style="color: red;">*</span></label>
-                        <input type="number" name="content" min="0" max="5" step="0.1" required/>
+                        <input type="number" class="inputValue" name="content" min="0" max="5" step="0.1" oninput="validateInput()" required/>
                       </div>
                       <div class="w3-quarter">
                         <label for="content">Quality of Delivery <span style="color: red;">*</span></label>
-                        <input type="number" name="delivery" min="0" max="5" step="0.1" required/>
+                        <input type="number" class="inputValue" name="delivery" min="0" max="5" step="0.1" oninput="validateInput()" required/>
                       </div>
                       <div class="w3-quarter">
                         <label for="content">Level of Availability <span style="color: red;">*</span></label>
-                        <input type="number" name="availability" min="0" max="5" step="0.1" required/>
+                        <input type="number" class="inputValue" name="availability" min="0" max="5" step="0.1" oninput="validateInput()" required/>
                       </div>
                       <div class="w3-quarter">
                         <label for="content">Level of Organization <span style="color: red;">*</span></label>
-                        <input type="number" name="organization" min="0" max="5" step="0.1" required/>
+                        <input type="number" class="inputValue" name="organization" min="0" max="5" step="0.1" oninput="validateInput()" required/>
                       </div>
                     </div>
                     <br>
@@ -109,6 +109,18 @@
   $(document).ready(function() {
       $('#professor-select').select2({ placeholder: '-- Select a Professor --' });
   });
+
+  function validateInput() {
+    var inputElements = document.getElementsByClassName('inputValue');
+    for (var i = 0; i < inputElements.length; i++) {
+      var inputValue = inputElements[i].value;
+      if (inputValue < 0.0 || inputValue > 5.0) {
+        alert('Please enter a valid value between 0.0 and 5.0');
+        // Clear the input field value
+        inputElements[i].value = '';
+      }
+    }
+  }
 </script>
 
 </body>
