--- a/help.html
+++ b/help.html
@@ -6,6 +6,7 @@
 
   .faq-section {
     margin-top: 20px;
+    padding-left: 50px;
   }
 
   .faq-question {
@@ -21,16 +22,11 @@
 
 <center>
   <br />
-  <div class="helptext">Need Help?</div>
-  Send an email to one of the system administrators:
-  <br />
-  <a href="mailto:jc4557@princeton.edu">Jacob Colchamiro</a>,
-  <a href="mailto:kw2689@princeton.edu">Kayla Waitman</a>,
-  <a href="mailto:eb1889@princeton.edu">Eden Bendory</a>,
-  <a href="mailto:jm2889@princeton.edu">Jonathan Mindel</a>
+  <div class="helptext" style="color: navy;">Need Help?</div>
 
+</center>
   <div class="faq-section">
-    <h2>Frequently Asked Questions:</h2>
+    <h2><b>Frequently Asked Questions:</b></h2>
 
     <div class="faq-question">Q: Where can I submit a new review?</div>
     <div class="faq-answer">A: To submit a new review, click on the Review a Professor button on the top of this screen. Alternatively, click <a href="/review_form"> here</a>.</div>
@@ -48,60 +44,72 @@
 
   </div>
 
-
-  <h2>Department Key:</h2>
-  African American Studies - AAS <br />
-  American Studies - AMS <br />
-  Anthropology - ANT <br />
-  Architecture - ARC <br />
-  Art and Archaeology - ART <br />
-  Center for Human Values - UCH <br />
-  Center for Statistics and Machine Learning - SML <br />
-  Center for the Study of Religion - CSR <br />
-  Council of the Humanities - HUM <br />
-  Creative Writing - LCA <br />
-  Chemistry - CHM <br />
-  Civil and Environmental Engineering - CEE <br />
-  Classics - CLA <br />
-  Comparative Literature - COM <br />
-  Computer Science - COS <br />
-  Dance - LCA <br />
-  East Asian Studies - EAS <br />
-  Economics - ECO <br />
-  Electrical and Computer Engineering - ECE <br />
-  English - ENG <br />
-  French and Italian - FIT <br />
-  Gender and Sexuality Studies - GSS <br />
-  German - GER <br />
-  Hellenic Studies - HLS <br />
-  History - HIS <br />
-  Lewis Center for the Arts - LCA <br />
-  Lewis-Sigler Institute of Genomics - LSI <br />
-  Linguistics - HUM <br />
-  Mathematics - MAT <br />
-  Music - MUS <br />
-  Near Eastern Studies - NES <br />
-  Politics - POL <br />
-  Princeton Institute for International and Regional Studie (PIIRS) - PII <br />
-  Princeton Institute for the Science and Technology of Materials (PRISM) - PSM
+<div style="padding-left: 50px;">
+  <h2><b>Department Keys:</b></h2>
+  - African American Studies - AAS <br />
+  - American Studies - AMS <br />
+  - Anthropology - ANT <br />
+  - Architecture - ARC <br />
+  - Art and Archaeology - ART <br />
+  - Center for Human Values - UCH <br />
+  - Center for Statistics and Machine Learning - SML <br />
+  - Center for the Study of Religion - CSR <br />
+  - Council of the Humanities - HUM <br />
+  - Creative Writing - LCA <br />
+  - Chemistry - CHM <br />
+  - Civil and Environmental Engineering - CEE <br />
+  - Classics - CLA <br />
+  - Comparative Literature - COM <br />
+  - Computer Science - COS <br />
+  - Dance - LCA <br />
+  - East Asian Studies - EAS <br />
+  - Economics - ECO <br />
+  - Electrical and Computer Engineering - ECE <br />
+  - English - ENG <br />
+  - French and Italian - FIT <br />
+  - Gender and Sexuality Studies - GSS <br />
+  - German - GER <br />
+  - Hellenic Studies - HLS <br />
+  - History - HIS <br />
+  - Lewis Center for the Arts - LCA <br />
+  - Lewis-Sigler Institute of Genomics - LSI <br />
+  - Linguistics - HUM <br />
+  - Mathematics - MAT <br />
+  - Music - MUS <br />
+  - Near Eastern Studies - NES <br />
+  - Politics - POL <br />
+  - Princeton Institute for International and Regional Studie (PIIRS) - PII <br />
+  - Princeton Institute for the Science and Technology of Materials (PRISM) - PSM
   <br />
-  Princeton Neuroscience Institute - PNI <br />
-  Princeton School of Public and International Affairs - SPI <br />
-  Princeton University Art Museum - UAM <br />
-  Psychology - PSY <br />
-  Religion - REL <br />
-  Slavic Languages and Literature - SLA <br />
-  Sociology - SOC <br />
-  Spanish and Portuguese Languages and Culture - SPO <br />
-  Theater - LCA <br />
-  Visual Arts - LCA <br />
+  - Princeton Neuroscience Institute - PNI <br />
+  - Princeton School of Public and International Affairs - SPI <br />
+  - Princeton University Art Museum - UAM <br />
+  - Psychology - PSY <br />
+  - Religion - REL <br />
+  - Slavic Languages and Literature - SLA <br />
+  - Sociology - SOC <br />
+  - Spanish and Portuguese Languages and Culture - SPO <br />
+  - Theater - LCA <br />
+  - Visual Arts - LCA <br />
 
   <br />
-  <a href="/index"
+  </div>
+
+  
+  <center>
+    <a href="/index"
     ><button style="background-color: orange">
       Go back to the homepage
     </button></a
   >
-</center>
+  <br>
+  <br>
+  Need more help? Send an email to one of the system administrators:
+  <br />
+  <a href="mailto:jc4557@princeton.edu">Jacob Colchamiro</a>,
+  <a href="mailto:kw2689@princeton.edu">Kayla Waitman</a>,
+  <a href="mailto:eb1889@princeton.edu">Eden Bendory</a>,
+  <a href="mailto:jm2889@princeton.edu">Jonathan Mindel</a>
+  </center>
 
 {% include 'footer.html' %}
