edits to front end for grammar and clarity

--- a/header.html
+++ b/header.html
@@ -35,7 +35,7 @@
       {% if is_admin: %} 
       <a target="childWindow" href="/adminlandingpage">Admin Controls</a> 
       {% endif %}
-      <a href="/logoutcas" onclick="return confirm('Are you sure you want to Logout?')" id = "logoutB">Logout</a>
+      <a href="/logoutcas" onclick="return confirm('Are you sure you want to log out?')" id = "logoutB">Log out</a>
     </div>
   </div>
   <a class= "hover" href="/review_form">Review a Professor</a>
