--- a/landing.html
+++ b/landing.html
@@ -24,7 +24,7 @@
 <center>
 <h1>Rate and review your professors.</h1>
 <br>
-<a href="/index"><button style="background-color: orange;">Log in with Princeton NetId</button></a>
+<a href="/index"><button style="background-color: orange;">Log in with Princeton NetID</button></a>
 </center>
 <br>
 <center>
