--- a/review.html
+++ b/review.html
@@ -60,11 +60,12 @@
                     </div>
                     <br>
                     <b>Any Comments?</b>
+                    <div style="font-style: italic; font-size: 10pt;">(up to 2000 characters)</div>
                     <textarea name="comment" maxlength="2000"> </textarea>
                     <br>
                     <label>If this review applies to a specific course(s), please list them below:</label>
-                    <input type="text" name="courses" maxlength="10"/>
-                    <br>
+                    <div style="font-style: italic; font-size: 10pt;">(up to 35 characters)</div>
+                    <input type="text" name="courses" maxlength="35" placeholder="Ex. COS126, COS226"/>
                     <br>
                     <span style="color: red;">*</span> = required
                     <br>
@@ -87,9 +88,9 @@
                       
                     <br>
                     <br>
-                    <p class="footnote"> Please Note: </p>
-                    <p class="footnote"> * &nbsp <b>Once a review is submitted, it cannot be edited or deleted.</b></p>
-                    <p class="footnote"> ** <b>If untruthful or innapropriate material is submitted, we reserve the right to bar a user and/or delete all of the user's existent reviews.</b></p>
+                    <p class="footnote"> <b>Please Note: </b> </p>
+                    <p class="footnote">Once a review is submitted, it cannot be edited or deleted.</p>
+                    <p class="footnote">If untruthful or innapropriate material is submitted, we reserve the right to bar a user and/or delete all of the user's existent reviews.</p>
                     <br>
                 </form>
         </div>
