--- a/help.html
+++ b/help.html
@@ -35,12 +35,14 @@
     <div class="faq-answer">A: You can always click on the words 'Princeton Professors' in the top left corner of the screen to navigate back to the home page. </div>
 
     <div class="faq-question">Q: I regret submitting a review and want to take it down. How can I do this? </div>
-    <div class="faq-answer">A: Email any of the admins listed on this page for assistance with removing a review. </div>
+    <div class="faq-answer">A: Email any of the administrators listed on this page for assistance with removing a review. </div>
 
     <div class="faq-question">Q: How do you assess professors? </div>
     <div class="faq-answer">A: Professors are scored on quality of content, delivery, availability, and organization. Content refers to choices that a professor makes regarding what material to include in the curriculum for a course. Delivery refers to the professor's ability to clearly explain concepts to students. Availability refers to a professor's willingness to help students with material outside of lecture, and organization refers to the overall clarity in a professor's teaching materials and the planning which went into producing them. </div>
 
-   
+    <div class="faq-question">Q: Are my reviews anonymous? </div>
+    <div class="faq-answer">A: Ordinary users cannot see your username when reading your reviews. However, your username will be visible to Princeton Professors administrators.  </div>
+
 
   </div>
 
