--- a/error_admin.html
+++ b/error_admin.html
@@ -39,11 +39,11 @@
       <br>  
   </center>
   </div>
-  <div class="adminbody">
+  <body style="background-color: rgb(71, 135, 232); color: white;">
   <div class="container-fluid">
  
 <center>
 <h1>{{error_msg}}. Please try again!</h1>
 </center>
 </div>
-</div>
+</body>
