--- a/adminprofpage.html
+++ b/adminprofpage.html
@@ -31,8 +31,7 @@
     </style>
   </head>
 
-  <body>
-  <div class="adminbody">
+  <body style="background-color: rgb(71, 135, 232); color: white;">
     <div class="adminheader container-fluid ">
       <center>
         <a style="text-decoration: none;"href="adminlandingpage"><h1>Admin Control Panel</h1></a>
@@ -52,7 +51,7 @@
         <br>    
         <br>  
     </center>
-    </div>
+  </div>
     {% if not is_admin: %} 
         You cannot access this page. 
     {% else %}
